--- a/package.json
+++ b/package.json
@@ -1,23 +1,24 @@
 {
-    "name": "down-cli",
-    "version": "0.0.1",
-    "description": "cli",
-    "main": "index.js",
-    "bin": {
-        "down-cli": "./bin/index.js"
-    },
-    "scripts": {},
-    "engines": {
-        "node": ">=8.9"
-    },
-    "dependencies": {
-        "chalk": "^5.0.1",
-        "commander": "^9.1.0",
-        "download-git-repo": "^3.0.2",
-        "fs-extra": "^10.0.1",
-        "handlebars": "^4.7.7",
-        "inquirer": "^8.2.1",
-        "log-symbols": "^5.1.0",
-        "ora": "^6.1.0"
-    }
+  "name": "down-cli",
+  "version": "0.0.1",
+  "description": "cli",
+  "main": "index.js",
+  "type": "commonjs",
+  "bin": {
+    "down-cli": "./bin/index.js"
+  },
+  "scripts": {},
+  "engines": {
+    "node": ">=8.9"
+  },
+  "dependencies": {
+    "chalk": "^4.0.0",
+    "commander": "^5.1.0",
+    "download-git-repo": "^3.0.2",
+    "fs-extra": "^9.0.0",
+    "handlebars": "^4.7.6",
+    "inquirer": "^7.1.0",
+    "log-symbols": "^4.0.0",
+    "ora": "^4.0.4"
+  }
 }
